// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[int] ZKSYNC Api [int] fetchConfig fetches: fetchConfig 1`] = `
Object {
  "contract": "0x3a49f0f4cf80992976625e1af168f31a12ab5004",
  "depositConfirmations": 0,
  "govContract": "0x80ddc394aa5eeaf20167156a0a1e547e6e42a067",
  "network": "ropsten",
  "zksyncVersion": "contractV4",
}
`;

exports[`[int] ZKSYNC Api [int] fetchTokenList fetches: fetchTokenList 1`] = `
Object {
  "list": Array [
    Object {
      "address": "0x4ec441e153047fd13ae26ec527abecf871ea6a3d",
      "decimals": 18,
      "enabledForFees": true,
      "id": 19,
      "symbol": "ERC20-19",
    },
    Object {
      "address": "0x59cee5c2522ebc0e786f08b517d2c462e8f88f6e",
      "decimals": 6,
      "enabledForFees": true,
      "id": 13,
      "symbol": "ERC20-13",
    },
    Object {
      "address": "0x6caa902bfac03f49d857e3bf05effc4d181f4d39",
      "decimals": 18,
      "enabledForFees": true,
      "id": 12,
      "symbol": "ERC20-12",
    },
    Object {
      "address": "0x3fd7bf4b341b724d3714dd562b47e49c089e0701",
      "decimals": 18,
      "enabledForFees": true,
      "id": 11,
      "symbol": "ERC20-11",
    },
    Object {
      "address": "0xb36b2e278f5f1980631ad10f693ab3e1bebd9f70",
      "decimals": 18,
      "enabledForFees": true,
      "id": 10,
      "symbol": "MLTT",
    },
    Object {
      "address": "0x1b46bd2fc40030b6959a2d407f7d16f66afadd52",
      "decimals": 18,
      "enabledForFees": true,
      "id": 9,
      "symbol": "BAT",
    },
    Object {
      "address": "0xc865bcbe4b6ef4b58a790052f2b51b4f06f586ac",
      "decimals": 18,
      "enabledForFees": true,
      "id": 8,
      "symbol": "ZRX",
    },
    Object {
      "address": "0x6856ec11f56267e3326f536d0e9f36ec7f7d1498",
      "decimals": 18,
      "enabledForFees": true,
      "id": 7,
      "symbol": "TUSD",
    },
    Object {
      "address": "0x16c550a97ad2ae12c0c8cf1cc3f8db4e0c45238f",
      "decimals": 18,
      "enabledForFees": true,
      "id": 6,
      "symbol": "BUSD",
    },
    Object {
      "address": "0x7e317ceaa15fe7d5474349043332319c5f28cc11",
      "decimals": 18,
      "enabledForFees": true,
      "id": 5,
      "symbol": "FSN",
    },
    Object {
      "address": "0x5ae45f7f17f0df0b24abe25a5522a9c9341ac04d",
      "decimals": 18,
      "enabledForFees": true,
      "id": 4,
      "symbol": "OKB",
    },
    Object {
      "address": "0x793f38ae147852c37071684cdffc1ff7c87f7d07",
      "decimals": 18,
      "enabledForFees": true,
      "id": 3,
      "symbol": "LINK",
    },
    Object {
      "address": "0x351714df444b8213f2c46aaa28829fc5a8921304",
      "decimals": 18,
      "enabledForFees": true,
      "id": 2,
      "symbol": "DAI",
    },
    Object {
      "address": "0x0000000000000000000000000000000000000000",
      "decimals": 18,
      "enabledForFees": true,
      "id": 0,
      "symbol": "ETH",
    },
  ],
  "pagination": Object {
    "count": 14,
    "direction": "older",
    "from": 19,
    "limit": 100,
  },
}
`;

exports[`[int] ZKSYNC Api [int] fetchTokenList fetches: fetchTokenListResponseSet 1`] = `
Set {
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "decimals": 18,
    "enabledForFees": true,
    "id": 0,
    "symbol": "ETH",
  },
  Object {
    "address": "0x351714df444b8213f2c46aaa28829fc5a8921304",
    "decimals": 18,
    "enabledForFees": true,
    "id": 2,
    "symbol": "DAI",
  },
  Object {
    "address": "0x793f38ae147852c37071684cdffc1ff7c87f7d07",
    "decimals": 18,
    "enabledForFees": true,
    "id": 3,
    "symbol": "LINK",
  },
  Object {
    "address": "0x5ae45f7f17f0df0b24abe25a5522a9c9341ac04d",
    "decimals": 18,
    "enabledForFees": true,
    "id": 4,
    "symbol": "OKB",
  },
  Object {
    "address": "0x7e317ceaa15fe7d5474349043332319c5f28cc11",
    "decimals": 18,
    "enabledForFees": true,
    "id": 5,
    "symbol": "FSN",
  },
  Object {
    "address": "0x16c550a97ad2ae12c0c8cf1cc3f8db4e0c45238f",
    "decimals": 18,
    "enabledForFees": true,
    "id": 6,
    "symbol": "BUSD",
  },
  Object {
    "address": "0x6856ec11f56267e3326f536d0e9f36ec7f7d1498",
    "decimals": 18,
    "enabledForFees": true,
    "id": 7,
    "symbol": "TUSD",
  },
  Object {
    "address": "0xc865bcbe4b6ef4b58a790052f2b51b4f06f586ac",
    "decimals": 18,
    "enabledForFees": true,
    "id": 8,
    "symbol": "ZRX",
  },
  Object {
    "address": "0x1b46bd2fc40030b6959a2d407f7d16f66afadd52",
    "decimals": 18,
    "enabledForFees": true,
    "id": 9,
    "symbol": "BAT",
  },
  Object {
    "address": "0xb36b2e278f5f1980631ad10f693ab3e1bebd9f70",
    "decimals": 18,
    "enabledForFees": true,
    "id": 10,
    "symbol": "MLTT",
  },
  Object {
    "address": "0x3fd7bf4b341b724d3714dd562b47e49c089e0701",
    "decimals": 18,
    "enabledForFees": true,
    "id": 11,
    "symbol": "ERC20-11",
  },
  Object {
    "address": "0x6caa902bfac03f49d857e3bf05effc4d181f4d39",
    "decimals": 18,
    "enabledForFees": true,
    "id": 12,
    "symbol": "ERC20-12",
  },
  Object {
    "address": "0x59cee5c2522ebc0e786f08b517d2c462e8f88f6e",
    "decimals": 6,
    "enabledForFees": true,
    "id": 13,
    "symbol": "ERC20-13",
  },
  Object {
    "address": "0x4ec441e153047fd13ae26ec527abecf871ea6a3d",
    "decimals": 18,
    "enabledForFees": true,
    "id": 19,
    "symbol": "ERC20-19",
  },
}
`;
